--- a/src/index.html
+++ b/src/index.html
@@ -13,24 +13,8 @@
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
 
-    <!--<link rel="stylesheet" type="text/css" href="assets/flatable/bower_components/bootstrap/css/bootstrap.min.css">
+  <script src="rw-money-mask.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="assets/flatable/icon/themify-icons/themify-icons.css">
-
-    <link rel="stylesheet" type="text/css" href="assets/flatable/icon/icofont/css/icofont.css">
-    <link rel="stylesheet" type="text/css" href="assets/flatable/icon/material-design/css/material-design-iconic-font.min.css">
-
-    <link rel="stylesheet" type="text/css" href="assets/flatable/pages/flag-icon/flag-icon.min.css">
-
-    <link rel="stylesheet" type="text/css" href="assets/flatable/pages/menu-search/css/component.css">
-
-    <link rel="stylesheet" type="text/css" href="assets/flatable/bower_components/nvd3/css/nv.d3.css" media="all">
-
-    <link rel="stylesheet" type="text/css" href="assets/flatable/css/style.css">
-  <link rel="stylesheet" type="text/css" href="assets/flatable/css/linearicons.css" >
-	<link rel="stylesheet" type="text/css" href="assets/flatable/css/simple-line-icons.css">
-	<link rel="stylesheet" type="text/css" href="assets/flatable/css/ionicons.css">
-	<link rel="stylesheet" type="text/css" href="assets/flatable/css/jquery.mCustomScrollbar.css">-->
 </head>
 <body>
   <ngx-app>Loading...</ngx-app>
